syntax = "proto3";

package dash.acl_group;

import "types.proto";

message AclGroup {
    types.IpVersion ip_version = 1;
    types.Guid guid = 2;
    string version = 3;
}

message AclGroupKey {
    string group_id = 1;
}
