syntax = "proto3";

package dash.route_type;

enum ActionType {
    ACTION_TYPE_UNSPECIFIED = 0;
    ACTION_TYPE_MAPROUTING = 1;
    ACTION_TYPE_DIRECT = 2;
    ACTION_TYPE_STATICENCAP = 3;
    ACTION_TYPE_APPLIANCE = 4;
    ACTION_TYPE_4_to_6 = 5;
    ACTION_TYPE_MAPDECAP = 6;
    ACTION_TYPE_DECAP = 7;
    ACTION_TYPE_DROP = 8;
}

enum EncapType {
    ENCAP_TYPE_UNSPECIFIED = 0;
    ENCAP_TYPE_VXLAN = 1;
    ENCAP_TYPE_NVGRE = 2;
}

enum RoutingType {
    ROUTING_TYPE_UNSPECIFIED = 0;
    ROUTING_TYPE_DIRECT = 1;
    ROUTING_TYPE_VNET = 2;
    ROUTING_TYPE_VNET_DIRECT = 3;
    ROUTING_TYPE_VNET_ENCAP = 4;
    ROUTING_TYPE_APPLIANCE = 5;
    ROUTING_TYPE_PRIVATELINK = 6;
    ROUTING_TYPE_PRIVATELINKNSG = 7;
    ROUTING_TYPE_SERVICETUNNEL = 8;
    ROUTING_TYPE_DROP = 9;
}

message RouteTypeItem {
    string action_name = 1;
    route_type.ActionType action_type = 2;
    // Optional
    // encap type depends on the action_type - {vxlan, nvgre}
    optional route_type.EncapType encap_type = 3;
    // Optional
    // vni value to be used as the key for encapsulation. Applicable if encap_type is specified. 
    optional uint32 vni = 4;
}

message RouteType {
    repeated RouteTypeItem items = 1;
}

message RouteTypeKey {
    // Available value has been enumerated at enum RoutingType.
    // Use string as the key for better readability.
    // Actions can be a list of action_types
    string routing_type = 1;
}
